--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "style": "sass --watch styles/main.scss pages/main/style.css"
+    "style": "sass --watch styles/main.scss pages/style.css"
   },
   "repository": {
     "type": "git",
